@@ -13,19 +13,19 @@ import javax.inject.Inject;
 public class Init extends Command {
 
     public WorkingDirectory wd = WorkingDirectory.getInstance();
+    
     @Override
     public void execute(String... args) {
         try {
-            wd.setPath(Path.of(args[0]));
-           /* if (Files.exists(Paths.get(".jgit"))) {
-                System.out.println("Directories already exist!");
-                return;
-            }*/
+            String path = (args.length == 1) ? "." : args[1];
+            wd.setPath(Path.of(path));
             Path newPath = wd.getPath(".jgit");
-
-
+            if(Files.exists(newPath)) {
+                System.out.println("There is already a .jgit directory.");
+                return;
+            }
             Files.createDirectories(newPath);
-            newPath = wd.getPath(".jgit", "object");
+            newPath = wd.getPath(".jgit", "objects");
             Files.createDirectories(newPath);
 
             newPath = wd.getPath(".jgit", "logs");
